fixed reduced CIFAR loading issue
data was assigned to Dataset.train_data instead of Dataset.data and targets to Dataset.train_labels instead of Dataset.targets

--- a/4_Convolutional/4.3-EXE-CIFAR-10.ipynb
+++ b/4_Convolutional/4.3-EXE-CIFAR-10.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -147,12 +147,12 @@
     "        new_test_labels += [i for _ in range(new_test_data[-1].shape[0])]\n",
     "\n",
     "    new_train_data = np.concatenate(new_train_data, 0)\n",
-    "    trainset.train_data = new_train_data\n",
-    "    trainset.train_labels = new_train_labels\n",
+    "    trainset.data = new_train_data\n",
+    "    trainset.targets = new_train_labels\n",
     "\n",
     "    new_test_data = np.concatenate(new_test_data, 0)\n",
-    "    testset.test_data = new_test_data\n",
-    "    testset.test_labels = new_test_labels\n",
+    "    testset.data = new_test_data\n",
+    "    testset.targets = new_test_labels\n",
     "\n",
     "    \n",
     "trainloader = torch.utils.data.DataLoader(trainset, batch_size=4,\n",
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -182,12 +182,14 @@
      "output_type": "stream",
      "text": [
       "Training data\n",
-      "(50000, 32, 32, 3)\n",
-      "50000\n",
-      "\n",
-      "Test data\n",
       "(10000, 32, 32, 3)\n",
       "10000\n",
+      "2\n",
+      "\n",
+      "Test data\n",
+      "(2000, 32, 32, 3)\n",
+      "2000\n",
+      "2\n",
       "\n"
      ]
     }
@@ -196,11 +198,13 @@
     "print(\"Training data\")\n",
     "print(trainset.data.shape)\n",
     "print(len(trainset.targets))\n",
+    "print(len(set(trainset.targets)))\n",
     "print()\n",
     "\n",
     "print(\"Test data\")\n",
     "print(testset.data.shape)\n",
     "print(len(testset.targets))\n",
+    "print(len(set(testset.targets)))\n",
     "print()"
    ]
   },
@@ -343,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -374,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -428,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -460,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -498,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -625,9 +629,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
