--- a/3_Feedforward_PyTorch/3.1-what-is-pytorch.ipynb
+++ b/3_Feedforward_PyTorch/3.1-what-is-pytorch.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,11 +57,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[4.1327e-39, 8.9082e-39, 9.8265e-39],\n",
+      "        [9.4592e-39, 1.0561e-38, 1.0653e-38],\n",
+      "        [1.0469e-38, 9.5510e-39, 9.1837e-39],\n",
+      "        [1.0561e-38, 1.0469e-38, 9.0000e-39],\n",
+      "        [1.0653e-38, 1.0194e-38, 1.0561e-38]])\n"
+     ]
+    }
+   ],
    "source": [
     "x = torch.Tensor(5, 3)\n",
     "print(x)"
@@ -76,9 +88,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.7163, 0.5864, 0.2177],\n",
+      "        [0.2562, 0.9564, 0.6468],\n",
+      "        [0.3371, 0.2341, 0.5295],\n",
+      "        [0.0463, 0.1295, 0.6404],\n",
+      "        [0.5735, 0.0504, 0.5350]])\n"
+     ]
+    }
+   ],
    "source": [
     "x = torch.rand(5, 3)\n",
     "print(x)"
@@ -93,9 +117,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([5, 3])\n"
+     ]
+    }
+   ],
    "source": [
     "print(x.size())"
    ]
@@ -109,9 +141,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.7163, 0.5864, 0.2177],\n",
+      "        [2.0000, 2.0000, 2.0000],\n",
+      "        [2.0000, 2.0000, 2.0000],\n",
+      "        [0.0463, 0.1295, 0.6404],\n",
+      "        [0.5735, 0.0504, 0.5350]])\n"
+     ]
+    }
+   ],
    "source": [
     "x[1:3] = 2\n",
     "print(x)"
@@ -389,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
