--- a/5_Recurrent/5.1-EXE-Recurrent-Neural-Networks.ipynb
+++ b/5_Recurrent/5.1-EXE-Recurrent-Neural-Networks.ipynb
@@ -81,9 +81,13 @@
    "source": [
     "For this exercise we will create a simple dataset that we can learn from. We generate sequences of the form:\n",
     "\n",
-    "`a a a a b b b b EOS`, `a a b b EOS`, `a a a a a b b b b b EOS`\n",
+    "`a a a a b b b b EOS`\n",
     "\n",
-    "where `EOS` is a special character denoting the end of a sequence. The task is to predict the next token $t_n$, i.e. `a`, `b`, `EOS` or the unknown token `UNK` given the sequence of tokens $\\{ t_{1}, t_{2}, \\dots , t_{n-1}\\}$ and we are to process sequences in a sequential manner."
+    "`a a b b EOS`\n",
+    "\n",
+    "`a a a a a b b b b b EOS`\n",
+    "\n",
+    "where `EOS` is a special character denoting the end of a sequence. The task is to predict the next token $t_{n}$ , i.e. `a`, `b`, `EOS` or the unknown token `UNK` given the sequence of tokens $\\{ t_{1}, t_{2}, \\dots , t_{n-1}\\}$ and we are to process sequences in a sequential manner."
    ]
   },
   {
@@ -649,7 +653,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have all the definitions in place, we can start to implement a forward pass."
+    "Now that we have all the definitions in place, we can start to implement a forward pass. Given a sequence of inputs and a hidden state, we need to loop over each input and compute the new hidden state and output sequentially."
    ]
   },
   {
@@ -1050,7 +1054,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Complete the training loop above and run the training. How well does it predict the sequence? You do not have to modify the hyper-parameters and network size."
+    "Complete the training loop above and run the training. You can leave the hyper-parameters and network size unchanged.\n",
+    "\n",
+    "A correct implementation should yield a loss **below 1.0** after 2000 epochs. How well does it predict the sequence?"
    ]
   },
   {
@@ -1739,7 +1745,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run the training loop above. What do you notice about the loss and number of epochs compared to the vanilla RNN from earlier?"
+    "Run the training loop above. A correct implementation should yield a loss **below 1.0** after 20 epochs.\n",
+    "\n",
+    "What do you notice about the loss and number of epochs compared to the vanilla RNN from earlier? Why can we use a higher learning rate for the LSTM?"
    ]
   },
   {
@@ -1964,9 +1972,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finish the training loop above and run the training. Compare your loss to the numpy implementation. Are they similar?\n",
+    "Finish the training loop above and run the training. A correct implementation should yield a loss **below 1.0** after 5 epochs.\n",
     "\n",
-    "Try to play around with the hyper-parameters and hidden dimensions. How low of a negative log-likelihood can you achieve?"
+    "Compare your loss to the numpy implementation. Are they similar? Try to play around with the hyper-parameters and hidden dimensions. How low of a negative log-likelihood can you achieve?"
    ]
   },
   {
@@ -1975,7 +1983,7 @@
    "source": [
     "## Exercise (optional):\n",
     "\n",
-    "Aside from the LSTM cell, various RNN cells exist. The gated recurrent unit (GRU) is a variation of the LSTM cell that uses less parameters. Try to look it up in the [PyTorch documentation](https://pytorch.org/docs/stable/nn.html#gru) and switch out the LSTM cell in the code above. What do you notice in terms of performance and convergence speed?"
+    "Aside from the LSTM cell, various RNN cells exist. The gated recurrent unit (GRU) is a variation of the LSTM cell that uses fewer parameters. Try to look it up in the [PyTorch documentation](https://pytorch.org/docs/stable/nn.html#gru) and switch out the LSTM cell in the code above. What do you notice in terms of performance and convergence speed?"
    ]
   },
   {
