--- a/5_Recurrent/5.1-EXE-Recurrent-Neural-Networks.ipynb
+++ b/5_Recurrent/5.1-EXE-Recurrent-Neural-Networks.ipynb
@@ -1474,7 +1474,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similar to the RNN in numpy we also need to specify a backward pass. Fortunately some of the TA's have a lot of free time to do that for you :-) "
+    "Similar to the RNN numpy implementation, we also need to specify a backward pass for the LSTM. Fortunately, some of the TAs have a lot of free time to do that for you :-) "
    ]
   },
   {
@@ -1632,7 +1632,7 @@
     "num_epochs = 50\n",
     "\n",
     "# Initialize a new network\n",
-    "z_size = hidden_size + vocab_size # Size of concatenated hidden + input vector\n",
+    "z_size = hidden_size + vocab_size # size of concatenated hidden + input vector\n",
     "params = init_lstm(hidden_size=hidden_size, vocab_size=vocab_size, z_size=z_size)\n",
     "\n",
     "# Initialize hidden state as zeros\n",
@@ -1804,7 +1804,7 @@
     "        # Output layer\n",
     "        x = self.l_out(x)\n",
     "        \n",
-    "        return F.softmax(x, dim=-1)\n",
+    "        return x\n",
     "\n",
     "net = Net()\n",
     "print(net)"
@@ -1975,6 +1975,20 @@
     "Finish the training loop above and run the training. A correct implementation should yield a loss **below 1.0** after 5 epochs.\n",
     "\n",
     "Compare your loss to the numpy implementation. Are they similar? Try to play around with the hyper-parameters and hidden dimensions. How low of a negative log-likelihood can you achieve?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise (optional):"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Implement a small function that evaluates the accuracy of a network on the test set. How do the different implementations compare in terms of accuracy?"
    ]
   },
   {
