--- a/3_Feedforward_PyTorch/3.4-EXE-FFN-MNIST.ipynb
+++ b/3_Feedforward_PyTorch/3.4-EXE-FFN-MNIST.ipynb
@@ -307,7 +307,7 @@
     "        x = F.linear(x, self.W_1, self.b_1)\n",
     "        x = self.activation(x)\n",
     "        x = F.linear(x, self.W_2, self.b_2)\n",
-    "        return F.softmax(x, dim=1)\n",
+    "        return x\n",
     "\n",
     "\n",
     "net = Net(num_features, num_l1, num_classes)"
@@ -542,7 +542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
