--- a/4_Convolutional/4.3-EXE-CIFAR-10.ipynb
+++ b/4_Convolutional/4.3-EXE-CIFAR-10.ipynb
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -184,12 +184,12 @@
       "# Training data\n",
       "Number of points: 10000\n",
       "Batch dimension [B x C x H x W]: torch.Size([4, 3, 32, 32])\n",
-      "Number of distingct labels: 2\n",
+      "Number of distinct labels: 2\n",
       "\n",
       "# Test data\n",
       "Number of points: 2000\n",
       "Batch dimension [B x C x H x W]: torch.Size([4, 3, 32, 32])\n",
-      "Number of distingct labels: 2\n"
+      "Number of distinct labels: 2\n"
      ]
     }
    ],
@@ -198,14 +198,14 @@
     "print(\"Number of points:\", len(trainset))\n",
     "x, y = next(iter(trainloader))\n",
     "print(\"Batch dimension [B x C x H x W]:\", x.shape)\n",
-    "print(\"Number of distingct labels:\", len(set(trainset.targets)))\n",
+    "print(\"Number of distinct labels:\", len(set(trainset.targets)))\n",
     "\n",
     "\n",
     "print(\"\\n# Test data\")\n",
     "print(\"Number of points:\", len(testset))\n",
     "x, y = next(iter(testloader))\n",
     "print(\"Batch dimension [B x C x H x W]:\", x.shape)\n",
-    "print(\"Number of distingct labels:\", len(set(testset.targets)))"
+    "print(\"Number of distinct labels:\", len(set(testset.targets)))"
    ]
   },
   {
