--- a/1_Feedforward_Pen_and_Paper/1.1-FNN-Pen-and-Paper.ipynb
+++ b/1_Feedforward_Pen_and_Paper/1.1-FNN-Pen-and-Paper.ipynb
@@ -139,14 +139,18 @@
         "We are considering supervised learning where we both have inputs (covariates) and assocatiated outputs (labels, targets, response variables) available. The network has $D$ inputs: $\\mathbf{x}=x_1,\\ldots,x_D$ and $K$ outputs $\\mathbf{y}=y_1,\\ldots,y_K$. The algorithm is called a neural network because the architecture of the model resembles the biological network between neurons in our brains. \n",
         "\n",
         "This computation is layered. Each layer first computes what is equivalent to the output $a_j$ of a linear statistical model and then applies a non-linear function to the linear model output. For the first layer - which takes the network input $x$ as input - these two steps look like this\n",
+        "$$\n",
         "\\begin{align}\n",
         "a^{(1)}_j & = \\sum_{i=1}^D w^{(1)}_{ji} x_i + w^{(1)}_{j0} \\\\\n",
         "z^{(1)}_j & = h_1(a^{(1)}_j ) \\ ,\n",
         "\\end{align}\n",
+        "$$\n",
         "where $h_1$ is the non-linear function in the first layer. We can get rid of writing the so-called bias $w^{(1)}_{j0}$ explicitly by adding an extra input $x_0$ which is always set to one and extending the sum to go from zero:\n",
+        "$$\n",
         "\\begin{align}\n",
         "a^{(1)}_j & = \\sum_{i=0}^D w^{(1)}_{ji} x_i \\ . \n",
         "\\end{align}\n",
+        "$$\n",
         "We will use this notation in the following for all layers and just write for example $\\sum_i \\ldots$ to be understood as $\\sum_{i=0}^D \\ldots$. \n",
         "\n",
         "The second layer takes the output the of the first layer as input:  \n",
@@ -159,6 +163,19 @@
         "$$\n",
         "This gives an example of how the neural network model input to output mapping can be specified. "
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VAbixd98z6GO",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -203,12 +220,14 @@
         "## Exercise c)\n",
         "\n",
         "c) Write the equations for an FFNN with $L$ layers as recursion. Use $l$ as the index for the layer:\n",
+        "$$\n",
         "\\begin{align}\n",
         "y_j & = \\ldots & \\\\\n",
         "z^{(l)}_j & = h_l(\\ldots) & l=1,\\ldots,L \\\\\n",
         "a^{(l)}_j & = \\ldots &  l=2,\\ldots,L \\\\\n",
         "a^{(1)}_j & = \\ldots & \n",
-        "\\end{align}"
+        "\\end{align}\n",
+        "$$"
       ]
     },
     {
@@ -613,10 +632,12 @@
         "## Exercise j) - the backpropagation rule for layer $l<L$\n",
         "\n",
         "j) Use the above results to argue why the general backpropagation rule for $l<L$ is written as:\n",
+        "$$\n",
         "\\begin{align}\n",
         "\\frac{\\partial E(w)}{\\partial w^{(l)}_{ji}} & = \\delta^{(l)}_j  z^{(l-1)}_i \\\\\n",
         "\\delta^{(l)}_j & = \\sum_{k=1}^K \\delta^{(l+1)}_k  w^{(l+1)}_{kj} h_{l}'(a^{(l)}_j) \n",
-        "\\end{align}"
+        "\\end{align}\n",
+        "$$"
       ]
     },
     {
