--- a/1_Feedforward_Pen_and_Paper/1.1-FNN-Pen-and-Paper.ipynb
+++ b/1_Feedforward_Pen_and_Paper/1.1-FNN-Pen-and-Paper.ipynb
@@ -165,19 +165,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "VAbixd98z6GO",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "qSUaU0F38EeH",
@@ -255,7 +242,7 @@
         "\n",
         "The FFNN model is quite flexible and can learn to approximate all sorts of functions from training data. Below are some examples of one-dimensional functions learned with a FFNN - i.e. we  try to learn a function (the neural network) from a set of points $(x,y)$ that can predict $y$ from input $x$ with as high accuracy as possible. The FFNN we use below consists of one hidden layer with three hidden units, $\\tanh$ as the non-linear function in the hidden layer and linear output:\n",
         "$$\n",
-        "y(x) = \\sum_{i=0}^3 w^{(2)}_i \\tanh( w^{(1)}_i x ) \\  \n",
+        "y(x) = \\sum_{i=0}^3 w^{(2)}_i \\tanh( w^{(1)}_i x ) \n",
         "$$\n",
         "The traning data is visualised as the blue dots, the learned function $y(x)$ (only displayed in the interval where we have training data) is the full red line and the dashed lines are the output from the hidden units. \n",
         "\n",
@@ -648,7 +635,7 @@
       },
       "source": [
         "## Exercise k) - optional\n",
-        "k) Derive the backpropagation rule for regression. That is perform the calculation in exercise i) for the regression loss. Everything else stays the same. Actaully it turns out that is you use $h_L(a) = a$ then you even get the same result as in i)."
+        "k) Derive the backpropagation rule for regression. That is perform the calculation in exercise i) for the regression loss. Everything else stays the same. Actually it turns out that is you use $h_L(a) = a$ then you even get the same result as in i)."
       ]
     },
     {
