updated description for exercise d

--- a/5_Recurrent/5.1-EXE-Recurrent-Neural-Networks.ipynb
+++ b/5_Recurrent/5.1-EXE-Recurrent-Neural-Networks.ipynb
@@ -871,7 +871,7 @@
         "id": "Vug6QCohsx_S"
       },
       "source": [
-        "### Implement the backward pass"
+        "## Backward pass"
       ]
     },
     {
@@ -882,115 +882,6 @@
       "source": [
         "It's now time to implement the backward pass. This can be a bit tricky so it may be helpful to take another look at the RNN equations, figure and your forward pass implementation. Note that (depending on your implementation) you may sometimes need to transpose using `np.transpose()` or simply `.T`."
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "roXK0HW6s2Z_"
-      },
-      "source": [
-        "def clip_gradient_norm(grads, max_norm=0.25):\n",
-        "    \"\"\"\n",
-        "    Clips gradients to have a maximum norm of `max_norm`.\n",
-        "    This is to prevent the exploding gradients problem.\n",
-        "    \"\"\" \n",
-        "    # Set the maximum of the norm to be of type float\n",
-        "    max_norm = float(max_norm)\n",
-        "    total_norm = 0\n",
-        "    \n",
-        "    # Calculate the L2 norm squared for each gradient and add them to the total norm\n",
-        "    for grad in grads:\n",
-        "        grad_norm = np.sum(np.power(grad, 2))\n",
-        "        total_norm += grad_norm\n",
-        "    \n",
-        "    total_norm = np.sqrt(total_norm)\n",
-        "    \n",
-        "    # Calculate clipping coeficient\n",
-        "    clip_coef = max_norm / (total_norm + 1e-6)\n",
-        "    \n",
-        "    # If the total norm is larger than the maximum allowable norm, then clip the gradient\n",
-        "    if clip_coef < 1:\n",
-        "        for grad in grads:\n",
-        "            grad *= clip_coef\n",
-        "    \n",
-        "    return grads\n",
-        "\n",
-        "\n",
-        "def backward_pass(inputs, outputs, hidden_states, targets, params):\n",
-        "    \"\"\"\n",
-        "    Computes the backward pass of a vanilla RNN.\n",
-        "    \n",
-        "    Args:\n",
-        "     `inputs`: sequence of inputs to be processed\n",
-        "     `outputs`: sequence of outputs from the forward pass\n",
-        "     `hidden_states`: sequence of hidden_states from the forward pass\n",
-        "     `targets`: sequence of targets\n",
-        "     `params`: the parameters of the RNN\n",
-        "    \"\"\"\n",
-        "    # First we unpack our parameters\n",
-        "    U, V, W, b_hidden, b_out = params\n",
-        "    \n",
-        "    # Initialize gradients as zero\n",
-        "    d_U, d_V, d_W = np.zeros_like(U), np.zeros_like(V), np.zeros_like(W)\n",
-        "    d_b_hidden, d_b_out = np.zeros_like(b_hidden), np.zeros_like(b_out)\n",
-        "    \n",
-        "    # Keep track of hidden state derivative and loss\n",
-        "    d_h_next = np.zeros_like(hidden_states[0])\n",
-        "    loss = 0\n",
-        "    \n",
-        "    # For each element in output sequence\n",
-        "    # NB: We iterate backwards s.t. t = N, N-1, ... 1, 0\n",
-        "    for t in reversed(range(len(outputs))):\n",
-        "\n",
-        "        # Compute the cross-entropy loss E (as a scalar)\n",
-        "        # When taking logarithms, it's a good idea to add a small constant (e.g. 1e-9)\n",
-        "        # YOUR CODE HERE!\n",
-        "        loss += \n",
-        "        \n",
-        "        # Backpropagate into output (derivative of cross-entropy)\n",
-        "        # If you're confused about this step, see this link for an explanation:\n",
-        "        # http://cs231n.github.io/neural-networks-case-study/#grad\n",
-        "        d_o = outputs[t].copy()\n",
-        "        d_o[np.argmax(targets[t])] -= 1\n",
-        "        \n",
-        "        # Backpropagate into W\n",
-        "        # YOUR CODE HERE!\n",
-        "        d_W += \n",
-        "        d_b_out += d_o\n",
-        "        \n",
-        "        # Backpropagate into h\n",
-        "        d_h = np.dot(W.T, d_o) + d_h_next\n",
-        "        \n",
-        "        # Backpropagate through non-linearity\n",
-        "        # (we assume tanh is used here)\n",
-        "        d_f = (1 - hidden_states[t]**2) * d_h\n",
-        "        d_b_hidden += d_f\n",
-        "        \n",
-        "        # Backpropagate into U\n",
-        "        # YOUR CODE HERE!\n",
-        "        d_U += \n",
-        "        \n",
-        "        # Backpropagate into V\n",
-        "        # YOUR CODE HERE!\n",
-        "        d_V += \n",
-        "        d_h_next = np.dot(V.T, d_f)\n",
-        "    \n",
-        "    # Pack gradients\n",
-        "    grads = d_U, d_V, d_W, d_b_hidden, d_b_out    \n",
-        "    \n",
-        "    # Clip gradients\n",
-        "    grads = clip_gradient_norm(grads)\n",
-        "    \n",
-        "    return loss, grads\n",
-        "\n",
-        "\n",
-        "loss, grads = backward_pass(test_input, outputs, hidden_states, test_target, params)\n",
-        "\n",
-        "print('We get a loss of:')\n",
-        "print(loss)"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1058,6 +949,115 @@
         "\n",
         "For more information on backpropagation through time see the [Deep learning book section 10.2.2](https://www.deeplearningbook.org/contents/rnn.html).\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "roXK0HW6s2Z_"
+      },
+      "source": [
+        "def clip_gradient_norm(grads, max_norm=0.25):\n",
+        "    \"\"\"\n",
+        "    Clips gradients to have a maximum norm of `max_norm`.\n",
+        "    This is to prevent the exploding gradients problem.\n",
+        "    \"\"\" \n",
+        "    # Set the maximum of the norm to be of type float\n",
+        "    max_norm = float(max_norm)\n",
+        "    total_norm = 0\n",
+        "    \n",
+        "    # Calculate the L2 norm squared for each gradient and add them to the total norm\n",
+        "    for grad in grads:\n",
+        "        grad_norm = np.sum(np.power(grad, 2))\n",
+        "        total_norm += grad_norm\n",
+        "    \n",
+        "    total_norm = np.sqrt(total_norm)\n",
+        "    \n",
+        "    # Calculate clipping coeficient\n",
+        "    clip_coef = max_norm / (total_norm + 1e-6)\n",
+        "    \n",
+        "    # If the total norm is larger than the maximum allowable norm, then clip the gradient\n",
+        "    if clip_coef < 1:\n",
+        "        for grad in grads:\n",
+        "            grad *= clip_coef\n",
+        "    \n",
+        "    return grads\n",
+        "\n",
+        "\n",
+        "def backward_pass(inputs, outputs, hidden_states, targets, params):\n",
+        "    \"\"\"\n",
+        "    Computes the backward pass of a vanilla RNN.\n",
+        "    \n",
+        "    Args:\n",
+        "     `inputs`: sequence of inputs to be processed\n",
+        "     `outputs`: sequence of outputs from the forward pass\n",
+        "     `hidden_states`: sequence of hidden_states from the forward pass\n",
+        "     `targets`: sequence of targets\n",
+        "     `params`: the parameters of the RNN\n",
+        "    \"\"\"\n",
+        "    # First we unpack our parameters\n",
+        "    U, V, W, b_hidden, b_out = params\n",
+        "    \n",
+        "    # Initialize gradients as zero\n",
+        "    d_U, d_V, d_W = np.zeros_like(U), np.zeros_like(V), np.zeros_like(W)\n",
+        "    d_b_hidden, d_b_out = np.zeros_like(b_hidden), np.zeros_like(b_out)\n",
+        "    \n",
+        "    # Keep track of hidden state derivative and loss\n",
+        "    d_h_next = np.zeros_like(hidden_states[0])\n",
+        "    loss = 0\n",
+        "    \n",
+        "    # For each element in output sequence\n",
+        "    # NB: We iterate backwards s.t. t = N, N-1, ... 1, 0\n",
+        "    for t in reversed(range(len(outputs))):\n",
+        "\n",
+        "        # Compute the cross-entropy loss E (as a scalar)\n",
+        "        # When taking logarithms, it's a good idea to add a small constant (e.g. 1e-9)\n",
+        "        # YOUR CODE HERE!\n",
+        "        loss += \n",
+        "        \n",
+        "        # Backpropagate into output o (derivative of cross-entropy)\n",
+        "        # If you're confused about this step, see this link for an explanation:\n",
+        "        # http://cs231n.github.io/neural-networks-case-study/#grad\n",
+        "        d_o = outputs[t].copy()\n",
+        "        d_o[np.argmax(targets[t])] -= 1\n",
+        "        \n",
+        "        # Backpropagate into weights W\n",
+        "        # YOUR CODE HERE!\n",
+        "        d_W += \n",
+        "        d_b_out += d_o\n",
+        "        \n",
+        "        # Backpropagate into hidden state h\n",
+        "        d_h = np.dot(W.T, d_o) + d_h_next\n",
+        "        \n",
+        "        # Backpropagate through non-linearity f\n",
+        "        # (we assume tanh is used here)\n",
+        "        d_f = (1 - hidden_states[t]**2) * d_h\n",
+        "        d_b_hidden += d_f\n",
+        "        \n",
+        "        # Backpropagate into weights U\n",
+        "        # YOUR CODE HERE!\n",
+        "        d_U += \n",
+        "        \n",
+        "        # Backpropagate into weights V\n",
+        "        # YOUR CODE HERE!\n",
+        "        d_V += \n",
+        "        d_h_next = np.dot(V.T, d_f)\n",
+        "    \n",
+        "    # Pack gradients\n",
+        "    grads = d_U, d_V, d_W, d_b_hidden, d_b_out    \n",
+        "    \n",
+        "    # Clip gradients\n",
+        "    grads = clip_gradient_norm(grads)\n",
+        "    \n",
+        "    return loss, grads\n",
+        "\n",
+        "\n",
+        "loss, grads = backward_pass(test_input, outputs, hidden_states, test_target, params)\n",
+        "\n",
+        "print('We get a loss of:')\n",
+        "print(loss)"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
