small bug in plotting

--- a/6_Mini_Project/6.1-EXE-Kaggle-Leaf-Challenge.ipynb
+++ b/6_Mini_Project/6.1-EXE-Kaggle-Leaf-Challenge.ipynb
@@ -230,7 +230,7 @@
     "\n",
     "# Plot of the first image\n",
     "plt.figure(figsize=(8, 8))\n",
-    "image = imread(image_paths[0], as_gray=True)\n",
+    "image = imread(image_paths[indexes[0]], as_gray=True)\n",
     "plt.imshow(image, cmap='gray')\n",
     "plt.title(\"%s\" % (species[0]))\n",
     "plt.axis('off')\n",
